# django-cal

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README  README.md  TODO  pyproject.toml  setup.py  views.py
.github/workflows/: pytest.yml
django_cal/: views.py
example_project/: manage.py  settings.py  urls.py
example_project/testapp/: views.py
src/django_cal/: views.py
tests/: settings.py  test_basics.py
